--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1>Niara Noctyrna, Creative Technologist</h1>
         <h2 style = "text-align:center;">Meet the Mind!</h2>
         <a href = "https://www.linkedin.com/in/niara-boykin" target = "_blank">
-            <img src = "IMG_7978.JPG" 
+            <img src = "NiaraCBoykin.github.io/IMG_7978.jpg" 
                 alt = "Headshot photo of Niara Noctyrna" 
                 title = "Niara Noctyrna" 
                 style = "width:200px;height:200px;padding-top:0px"
@@ -31,3 +31,4 @@
         </a>
     </body>
 </html>
+
